fix avatar overlapping navlinks

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -236,7 +236,8 @@ img {
 @media only screen and (min-width: 768px) {
   .navbar-custom .avatar-container {
     width: 100px;
-    margin-top: -50px;
+    margin-top: -10px;
+    z-index: -1;
   }
 
   .navbar-custom .avatar-container  .avatar-img-border {
